--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>Victoria Michailovna Schutenko is a 4-year student of the Faculty of Physics, Mathematics and Natural Sciences from Peoples&rsquo; Friendship University of Russia (RUDN university). She is a Junior. Majoring in Fundamental Informatics and computer sсience. Her research interests include learning programming languages c++, python, swift, system administration, business processes.</p>
+      <p>Victoria Mikhailovna Shutenko graduated from the Bachelor of RUDN at the Faculty of Physics, Mathematics and Natural Sciences with a degree in Fundamental Computer Science and Information Technology in 2023. Now she plans to continue to receive higher education in the master&rsquo;s program. Her interests include learning programming languages c++, python, swift, testing and business analytics.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/resume.pdf" target="_blank">resumé</a>.</p>
 
