--- a/ru/index.html
+++ b/ru/index.html
@@ -999,7 +999,7 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>Виктория Михайловна Шутенко является студенткой 4 курса РУДН по специальности &ldquo;Фундаментальная информатика и информационные технологии&rdquo;. В июле 2023 года уже получит диплом бакалавра. Её интересы включают изучение языков программирования c++, python, swift, системное администрирование и бизнес-процессы.</p>
+      <p>Виктория Михайловна Шутенко закончила бакалавр РУДН на факультете физико-математических и естественных наук по специальности &ldquo;Фундаментальная информатика и информационные технологии&rdquo; в 2023 году. Сейчас планирует продолжать получать высшее образование на программе магистратуры. Её интересы включают изучение языков программирования c++, python, swift, тестирование и бизнес-аналитика.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/resume.pdf" target="_blank">resumé</a>.</p>
 
