--- a/404.html
+++ b/404.html
@@ -60,7 +60,7 @@
   
     
   
-  <meta name="description" content="Student of the Faculty of Physics, Mathematics and Natural Sciences" />
+  <meta name="description" content="Master’s student of the Faculty of Physics, Mathematics and Natural Sciences" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://shutenkovika.github.io/404.html" />
@@ -301,7 +301,7 @@
   <meta property="og:site_name" content="Academic" />
   <meta property="og:url" content="https://shutenkovika.github.io/404.html" />
   <meta property="og:title" content="404 Page not found | Academic" />
-  <meta property="og:description" content="Student of the Faculty of Physics, Mathematics and Natural Sciences" /><meta property="og:image" content="https://shutenkovika.github.io/media/icon_hua1b0a5594db68af74df8f8c0341a1e6e_63125_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Master’s student of the Faculty of Physics, Mathematics and Natural Sciences" /><meta property="og:image" content="https://shutenkovika.github.io/media/icon_hua1b0a5594db68af74df8f8c0341a1e6e_63125_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://shutenkovika.github.io/media/icon_hua1b0a5594db68af74df8f8c0341a1e6e_63125_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
